--- a/client/src/components/Playlist/Playlist.module.css
+++ b/client/src/components/Playlist/Playlist.module.css
@@ -10,10 +10,34 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+
+
 }
 .catalogue{
     background-color: var(--semiDark);
     height: 90%;
     width: 100%;
     border-radius: 5px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
+/* width */
+::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--dark); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: black; 
+  }
